toml-pretty-deser/tests/snapshots/i01__tagged_enum_context_overwrite_between_deser_and_pretty_custom.snap
---
source: toml-pretty-deser/tests/i01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
  ┆
6 │         [[transform]]
7 │         kind = "Resize"
  ┆                ────┬───
  ┆                    │
  ┆                    ╰──── In this step!
8 │         width = 55
  ┆                   ┬
  ┆                   │
  ┆                   ╰─ width cannot be 55
──╯
Hint: See https://docs.example.com/steps/Resize
